Contact & Responsive WIP

--- a/html/contact.html
+++ b/html/contact.html
@@ -7,24 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description" content="The best or nothing.">
     <meta name="author" content="Aco Grčka">
-	
+
     <title>Επικοινωνία</title>
 	<link rel="shortcut icon" type="image/png" href="../media/favicon.png">
-   
+
 	<link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
-   
-   
+
+
     <link href="../css/style.css" rel="stylesheet">
 	<link href="../css/media-queries.css" rel="stylesheet">
-	
-	
+
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 
   </head>
 
-  <body  id="page-top">
+  <body  id="page-top" class="body-contact">
 	<!-- ----- Navigation ----- -->
-	<header id="header" class="large">
+	<header id="header" class="large greek">
 		<div class="container">
 			<nav id="navigation">
 				<a href="../index.html"><img id="nav_logo" class="large" alt="nav_logo" src="../media/Logo2.png"></a>
@@ -44,7 +44,7 @@
 	<!-- --- -->
 	<header id="mobile_header">
 		<div class="mobile_container">
-			<a href="index.html"><img id="mobile_nav_logo" src="media/Logo2.png"></a>
+			<a href="index.html"><img id="mobile_nav_logo" src="../media/Logo2.png"></a>
 			<a href="#" class="clickme btn"><span>≡</span> Menu</a>
 			<ul class="subdiv" style="display:none">
 				<li><a href="../index.html">Σπίτι</a></li>
@@ -58,68 +58,63 @@
 			</ul>
 		</div>
 	</header>
-	
+
 	<!-- ----- ----- ----- -->
-	
-	<section id="contact1">
-	
-	
-	
-	
-	
-		<h1>Επικοινωνία</h1>
+
+	<section id="section-contact">
+
+		<h1 class="contact_h1">Επικοινωνία</h1>
 		<form id="contact" action="https://formspree.io/aco.grcka@gmail.com" method="POST">
 			<label for="fname">First Name</label>
 			<input type="text" id="fname" name="firstname" placeholder="Your name.." required>
-			
+
 			<label for="lname">Last Name</label>
 			<input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
-			
+
 			<label for="category">Category</label>
 			<select id="category" name="category" required>
 				<option value="olives">Shop</option>
 				<option value="feedback">Feedback</option>
 				<option value="question">Question</option>
 			</select>
-			
+
 		<label for="subject">Subject</label>
 		<textarea id="subject" name="subject" placeholder="Write something.." style="height:170px" required></textarea>
-			
+
 		<label for="_replyto">E-Mail</label>
 		<input type="email" name="_replyto" placeholder="Your E-Mail" required>
-		
+
 		<input type="submit" value="Send">
 	</form>
 	</div>
-	
-	
-	
-	
-	
-		<footer id="footer" class="contact">
-			<div id="footer_left" class="footer">&copy; Aco Grčka</div>
-			<div id="footer_right" class="footer">
-				<a href="https://www.instagram.com/aco.grcka/">Insta: Aco.Grcka</a>
-				<a href="#">Επικοινωνία</a>
-				<a href="404.html">Ενημερωτικό δελτίο</a>
-				<a href="../index.html">ανεβαίνω</a>
-			</div>
-		</footer>
-	
+
+
+
+
+
 	</section>
 	<!-- ----- ----- ----- -->
-  
-  
-  
-  
+
+  <footer id="footer" class="footer-contact">
+    <div id="footer_left" class="footer">&copy; Aco Grčka</div>
+    <div id="footer_right" class="footer">
+      <a href="https://www.instagram.com/aco.grcka/">Insta: Aco.Grcka</a>
+      <a href="#">Επικοινωνία</a>
+      <a href="404.html">Ενημερωτικό δελτίο</a>
+      <a href="../index.html">ανεβαίνω</a>
+    </div>
+  </footer>
+
+
+
     <script src="../js/script.js"></script>
-  
-  
-  
 
 
-  
-    
+
+
+
+
+
 
   </body>
 </html>
