--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description" content="The best or nothing.">
     <meta name="author" content="Aco Grčka">
-	
+
     <title>Grčka ελιές</title>
 	<link rel="shortcut icon" type="image/png" href="media/favicon.png">
-   
+
 	<link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
-   
-   
+
+
     <link href="css/style.css" rel="stylesheet">
 	<link href="css/media-queries.css" rel="stylesheet">
-	
-	
+
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 
   </head>
 
   <body  id="page-top">
 	<!-- ----- Navigation ----- -->
-	<header id="header" class="large">
+	<header id="header" class="large greek">
 		<div class="container">
 			<nav id="navigation">
 				<a href="index.html"><img id="nav_logo" class="large" alt="nav_logo" src="media/Logo2.png"></a>
@@ -58,7 +58,7 @@
 			</ul>
 		</div>
 	</header>
-	
+
 	<!-- ----- ----- ----- -->
 	<span id="verlinkung_home"  class="verlinkungen"></span>
 	<section id="home">
@@ -68,12 +68,12 @@
 			<div><h3>Μια μέρα ελιάς κρατά τον γιατρό μακριά!</h3></div>
 		</div>
 	</section>
-	
+
 	<span id="verlinkung_nachrichten"  class="verlinkungen"></span>
 	<section id="nachrichten">
 		<h1>Νέα</h1>
 		<div class="grid-container-news">
-		
+
 			<div class="N_Nobel">
 				<img id="Nimg_Nobel" src="media/nobel.png" alt="">
 				<h3>Προεδρική ομιλία</h3>
@@ -81,7 +81,7 @@
 					"Γεια σου, το όνομά μου είναι Proky και αγαπώ τη Γκίκα Ελιές της εθνικής μας υπερηφάνειας."
 				</p>
 			</div>
-			
+
 			<div class="N_Formula">
 				<img id="Nimg_Formula" src="media/team.png" alt="">
 				<h3>Προεδρική ομιλία</h3>
@@ -89,12 +89,12 @@
 					"Γεια σου, το όνομά μου είναι Proky και αγαπώ τη Γκίκα Ελιές της εθνικής μας υπερηφάνειας."
 				</p>
 			</div>
-		
-		
+
+
 			<div class="N_Werbig">
 				<iframe width="auto" height="100%" src="https://www.youtube-nocookie.com/embed/nvQNwTGb6L4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
-			
+
 			<div class="N_Pres">
 				<img id="Nimg_Pres" src="media/pres.jpg" alt="">
 				<h3>Προεδρική ομιλία</h3>
@@ -109,7 +109,7 @@
 				</p>
 				<p class="DateNews">Ιωάννης Βλάχος, 24.01.2019</p>
 			</div>
-			
+
 			<div class="N_Ang">
 				<img id="Nimg_Ang" src="media/ale1.jpg" alt="">
 				<h3>υπάλληλος του μήνα</h3>
@@ -118,7 +118,7 @@
 				</p>
 				<p class="DateNews">Ιωάννης Βλάχος, 1.01.2019</p>
 			</div>
-			
+
 			<div class="N_Lambo">
 				<img id="Nimg_Lambo" src="media/lambo.jpg" alt="">
 				<h3>Νέα Lamborghini</h3>
@@ -134,7 +134,7 @@
 				</p>
 				<p class="DateNews">Ιωάννης Βλάχος, 28.10.2018</p>
 			</div>
-			
+
 			<div class="N_Snow">
 				<img id="Nimg_Snow" src="media/snow.jpg" alt="">
 				<h3>Χιόνι στην Κρήτη</h3>
@@ -143,7 +143,7 @@
 				</p>
 				<p class="DateNews">Ιωάννης Βλάχος, 21.12.2018</p>
 			</div>
-			
+
 			<div class="N_Baum">
 				<img id="Nimg_Baum" src="media/Old_Baum.png" alt="">
 				<h3>Χρόνια πολλά για την παλαιότερη μας ελιά!</h3>
@@ -161,14 +161,14 @@
 				<p class="DateNews">Aco Grčka, 21.01.2018</p>
 			</div>
 		</div>
-		
+
 	</section>
-	
-	
+
+
 	<!-- <div style="height:2000px; background-color:salmon;"></div> -->
-	
-	
-	
+
+
+
 	<footer id="footer">
 		<div id="footer_left" class="footer">&copy; Aco Grčka</div>
 		<div id="footer_right" class="footer">
@@ -178,21 +178,21 @@
 			<a href="#verlinkung_home">ανεβαίνω</a>
 		</div>
 	</footer>
-	
-	
+
+
 	<!-- ----- ----- ----- -->
-  
-  
-  
-  
+
+
+
+
     <script src="js/script.js"></script>
-  
-  
-  
 
 
-  
-    
+
+
+
+
+
 
   </body>
 </html>
