Phhuuu k.a meh hure vell glaub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<ul id="nav_content">
 					<li><a href="#home">Σπίτι</a></li>
 					<li><a href="#nachrichten">Νέα</a></li>
-					<li><a href="html/404.html">μάρκα</a></li>
+					<li><a href="html/brand.html">μάρκα</a></li>
 					<li><a href="html/404.html">τις ελιές μας</a></li>
 					<li><a href="html/404.html">ομάδα</a></li>
 					<li><a href="html/404.html">γκαλερί</a></li>
@@ -49,7 +49,7 @@
 			<ul class="subdiv" style="display:none">
 				<li><a href="#verlinkung_home">Σπίτι</a></li>
 				<li><a href="#verlinkung_nachrichten">Νέα</a></li>
-				<li><a href="html/404.html">μάρκα</a></li>
+				<li><a href="html/brand.html">μάρκα</a></li>
 				<li><a href="html/404.html">τις ελιές μας</a></li>
 				<li><a href="html/404.html">ομάδα</a></li>
 				<li><a href="html/404.html">γκαλερί</a></li>
