--- a/html/brand.html
+++ b/html/brand.html
@@ -8,7 +8,7 @@
     <meta name="description" content="The best or nothing.">
     <meta name="author" content="Aco Grčka">
 
-    <title>Ohh Noo!</title>
+    <title>Grčka Olives - μάρκα</title>
 	<link rel="shortcut icon" type="image/png" href="../media/favicon.png">
 
 	<link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
@@ -61,22 +61,74 @@
 
 	<!-- ----- ----- ----- -->
 	<span id="verlinkung_home"  class="verlinkungen"></span>
-	<section id="NotFoundPage">
-		<div id="home_title"><h1>Ohhh Noo!</h1></div>
-		<div><img id="test" src="../media/Soon2.png"></div>
+
+	<span id="verlinkung_nachrichten"  class="verlinkungen"></span>
+	<section id="brand">
+		<section id="Y1" class="brand_first">
+			<div id="brand_body">
+				<h1 class="brand_h1">1769</h1>
+        <div id="Y1-grid" class="brand-content-grid">
+          <img src="../media/brand/Y1-Pic.png">
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+
+			</div>
+
+			<a href="#verlinkung_brand_2">
+				<img id="brand_arrow" src="../media/arrow.png" alt="">
+			</a>
+		</section>
+
+		<span id="verlinkung_brand_2"  class="verlinkungen"></span>
+		<section id="Y2" class="brand_ungerade">
+			<div id="brand_body">
+				<h1 class="brand_h1">1769</h1>
+
+
+			</div>
+
+			<a href="#verlinkung_brand_3">
+				<img id="brand_arrow" src="../media/arrow.png" alt="">
+			</a>
+		</section>
+
+		<span id="verlinkung_brand_3"  class="verlinkungen"></span>
+		<section id="Y3" class="brand_gerade">
+			<div id="brand_body">
+				<h1 class="brand_h1">1769</h1>
+
+
+			</div>
+
+			<a href="#verlinkung_brand_4">
+				<img id="brand_arrow" src="../media/arrow.png" alt="">
+			</a>
+		</section>
+
+
+
+
+		<span id="verlinkung_brand_4"  class="verlinkungen"></span>
+		<section id="Y3" class="brand_last">
+			<div id="brand_body">
+				<h1 class="brand_h1">1769</h1>
+
+
+			</div>
+		</section>
 	</section>
 
 
 
 
 
-	<footer id="footer">
+  <footer id="footer">
 		<div id="footer_left" class="footer">&copy; Aco Grčka</div>
 		<div id="footer_right" class="footer">
 			<a href="https://www.instagram.com/aco.grcka/">Insta: Aco.Grcka</a>
-			<a href="#">Contact</a>
-			<a href="#">Newsletter</a>
-			<a href="#verlinkung_home">Nach Oben</a>
+			<a href="html/contact.html">Επικοινωνία</a>
+			<a href="html/404.html">Ενημερωτικό δελτίο</a>
+			<a href="#verlinkung_home">ανεβαίνω</a>
 		</div>
 	</footer>
 
