--- a/html/contact.html
+++ b/html/contact.html
@@ -30,12 +30,12 @@
 				<a href="../index.html"><img id="nav_logo" class="large" alt="nav_logo" src="../media/Logo2.png"></a>
 				<ul id="nav_content">
 					<li><a href="../index.html">Σπίτι</a></li>
-					<li><a href="../index.html#nachrichten">Νέα</a></li>
-					<li><a href="404.html">μάρκα</a></li>
+					<li><a href="../index.html">Νέα</a></li>
+					<li><a href="brand.html">μάρκα</a></li>
 					<li><a href="404.html">τις ελιές μας</a></li>
 					<li><a href="404.html">ομάδα</a></li>
 					<li><a href="404.html">γκαλερί</a></li>
-					<li><a href="404.html">Επικοινωνία</a></li>
+					<li><a href="contact.html">Επικοινωνία</a></li>
 					<li><a href="en/index.html">|EN|</a></li>
 				</ul>
 			</nav>
@@ -48,8 +48,8 @@
 			<a href="#" class="clickme btn"><span>≡</span> Menu</a>
 			<ul class="subdiv" style="display:none">
 				<li><a href="../index.html">Σπίτι</a></li>
-				<li><a href="../index.html#nachrichten">Νέα</a></li>
-				<li><a href="404.html">μάρκα</a></li>
+				<li><a href="../index.html">Νέα</a></li>
+				<li><a href="brand.html">μάρκα</a></li>
 				<li><a href="404.html">τις ελιές μας</a></li>
 				<li><a href="404.html">ομάδα</a></li>
 				<li><a href="404.html">γκαλερί</a></li>
